syntax="proto3";
package com.game.message.proto;




import "Const.proto";

//结账
message CheckCmd {
	int32 money = 1;
}

message RewardItem {
    int64 id = 1;
    int32 baseId = 2;
    itemType itemType = 3;
    int32 itemCount = 4;
}

//数值类型
message RewardAttrInfo {
    optional playerAttr attr = 1;
    optional int32 type = 2; //1:总值 2:变化值
    optional int64 count = 3;
}